--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -55,12 +55,14 @@ jobs:
       # ⚠️ IMPORTANT: Create .env file with DATABASE_URL for the running container
       # This .env file will be used by docker-compose to set the runtime environment variables.
       - name: Create runtime .env file
+        shell: bash
         run: |
           echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" > .env
           echo "MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }}" >> .env
           echo "MYSQL_DATABASE=${{ secrets.MYSQL_DATABASE }}" >> .env
 
       - name: Pull and Recreate Containers
+        shell: bash
         # We use 'pull' to ensure we get the latest image pushed by Job 1.
         # We use '--force-recreate' to guarantee the container restarts with the new image.
         run: |
