fix: Removed incorrect working-directory default causing path error

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,8 +13,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 🟢 FIX: Create .env file with ALL necessary secrets for the build environment
-      - name: Create .env file from GitHub Secrets
+      - name: Create .env file from GitHub Secrets (CI)
         run: |
           # These secrets are used by the Dockerfile during the build phase if needed.
           echo "MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }}" >> .env
@@ -43,30 +42,25 @@ jobs:
   # Job 2: Deploys the latest image to the local server (Continuous Deployment)
   # ---------------------------------------------------------------------
   deploy_to_local:
-    # ⚠️ IMPORTANT: The 'self-hosted' label must match the label you gave your runner (e.g., wsl-deploy-runner).
-    # Since you configured your runner with the default 'self-hosted' label, we will use that.
     runs-on: self-hosted
     needs: [build_and_push_image] # Waits for Job 1 to finish
-    defaults:
-      run:
-        shell: bash
-        working-directory: "/mnt/d/bhavan kumar/docker_practice"
-
+    
+    # 💥 CRITICAL FIX: The entire 'defaults' section is removed as it was causing the path error.
+    
     steps:
       - name: Checkout code (on the self-hosted runner)
         uses: actions/checkout@v4
         
-      # ⚠️ IMPORTANT: Create .env file with DATABASE_URL for the running container
-      # This .env file will be used by docker-compose to set the runtime environment variables.
+      # ⚠️ IMPORTANT: Add 'shell: bash' to the run steps to handle spaces in the repository path.
       - name: Create runtime .env file
+        shell: bash
         run: |
           echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" > .env
           echo "MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }}" >> .env
           echo "MYSQL_DATABASE=${{ secrets.MYSQL_DATABASE }}" >> .env
 
       - name: Pull and Recreate Containers
-        # We use 'pull' to ensure we get the latest image pushed by Job 1.
-        # We use '--force-recreate' to guarantee the container restarts with the new image.
+        shell: bash
         run: |
           echo "Pulling latest image and deploying..."
           docker-compose pull
